--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.2.12",
+        "@angular/animations": "^7.2.15",
         "@angular/common": "7.2.12",
         "@angular/compiler": "7.2.12",
         "@angular/core": "7.2.12",
@@ -32,6 +32,8 @@
         "googleapis": "33.0.0",
         "jquery": "3.4.1",
         "perfect-scrollbar": "1.4.0",
+        "primeicons": "^2.0.0",
+        "primeng": "^8.0.4",
         "rxjs": "6.4.0",
         "rxjs-compat": "6.4.0",
         "zone.js": "0.9.0"
@@ -48,9 +50,10 @@
         "karma": "4.0.1",
         "karma-chrome-launcher": "2.2.0",
         "karma-cli": "2.0.0",
+        "karma-coverage-istanbul-reporter": "2.0.5",
         "karma-jasmine": "2.0.1",
         "karma-jasmine-html-reporter": "1.4.0",
-        "karma-coverage-istanbul-reporter": "2.0.5",
+        "node-sass": "^4.12.0",
         "protractor": "5.4.2",
         "ts-node": "8.0.3",
         "tslint": "5.15.0",
